# d-invariance-ffd

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: disclosure_policy.md  index.html  methodology.md  public_api.md  research_mapping.md
examples/: synthetic_d_invariance.py
results/: README.md  frozen_operators.csv
src/audit/: __init__.py  leakage.py  schema.py
src/ffd/: __init__.py  estimator.py  invariance.py  operator.py
src/segmentation/: __init__.py  boundaries.py
tests/: test_boundaries.py  test_ffd_operator.py  test_invariance.py  test_leakage.py  test_schema.py
